# city-scrapers-core

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Pipfile  README.md  lefthook.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
city_scrapers_core/: __init__.py  constants.py  decorators.py  items.py  utils.py
city_scrapers_core/commands/: combinefeeds.py  genspider.py  list.py  runall.py  validate.py
city_scrapers_core/extensions/: __init__.py  azure_status.py  azure_storage.py  s3_status.py  status.py
city_scrapers_core/middlewares/: __init__.py  azure_diff.py  diff.py  s3_diff.py
city_scrapers_core/pipelines/: __init__.py  azure_diff.py  default.py  diff.py  jscalendar.py  meeting.py  ocd.py  s3_diff.py  validation.py
city_scrapers_core/spiders/: __init__.py  boarddocs.py  legistar.py  spider.py  tribe.py
city_scrapers_core/templates/: spider.tmpl  spider_legistar.tmpl  test.tmpl  test_legistar.tmpl
docs/: commands.rst  conf.py  constants.rst  extensions.rst  index.rst  items.rst  pipelines.rst  requirements.txt  spiders.rst  testing.rst
docs/ext/: smart_resolver.py
schema/: meeting.schema.json
tests/: test_commands.py  test_middlewares.py  test_pipelines.py  test_spiders.py  utils.py
